# myler2

./: .gitignore  CMakeLists.txt  Makefile  console.h  httpclient.h  main.c  music.h  myler.c  myler.h  myler_cmdline.c  myler_cmdline.h  myler_config.h  myler_list.c  myler_list.h  myler_lyrics.c  myler_lyrics.h  myler_search.c  myler_search.h  myler_ui.c  myler_ui.h  myler_utils.c  myler_utils.h  mystring.c  mystring.h  system.h
linux/: console.c  httpclient.c  music.c  system.c
windows/: console.c  system.c
